- #11     The month report shows multi-days current task truncated (TI-3)
- #21     Add/Remove tag to/from current activity (TI-13)
          (thanks to lumbric)
- #62     `timew track` with future interval records nothing or incomplete interval (TI-57)
- #68     Add annotations to time intervals (TI-63)
- #77     Support non-tag interval data storage (TI-72)
          (thanks to Tomas Babej)
- #98     Command Injection Security Vulnerability in on-modify.timewarrior (TI-94)
          (thanks to Aaron Fields)
- #101    timew assertion error on delete (TI-97)
          (thanks to janikrabe)
- #104    :lastquarter throws exception in first quarter (TI-100)
          (thanks to Andreas Poisel)
- #105    Keeps tracking renamed and stopped task (TI-101)
          (thanks to Antanas B.)
- #107    Fix autorange in chart (TI-103)
          (thanks to Fabian Pflug)
- #111    Some tests fail depending on the time of day
          (thanks to chronitis)
- #113    summary does not display correctly open intervals spanning day border
          (thanks to janikrabe)
- #131    Introduce 'modify' to adjust historical records to fixed date/time
          (thanks to sruffell)
- #135    Task at month end not getting displayed
          (thanks to towo)
- #138    Entering an escaped quote in a tag name causes incorrect JSON to be generated
          (thanks to bognolo)
- #139    month 1st responds with "Time tracking cannot be set in the future"
          (thanks to ddombrowsky, triclops200)
- #142    allow setting end of task in future
          (thanks to sclo)
- #157    CLI: Ensure IDs are non-zero
          (thanks to janikrabe)
- #165    CmdSummary does not show empty intervals at midnight
          (thanks to janikrabe)
- #166    getTracked behaves incorrectly when latest interval is empty
          (thanks to janikrabe)
- #167    Cannot shorten interval to zero length
          (thanks to janikrabe)
- #174    Interval is split in two when it encloses month border