@@ -1,0 +1,9 @@
+# Shell completion
+
+The script here is taken from a separate project.
+Issues and pull-requests should go there.
+The updated version will then be included here.
+
+If you are missing a completion, feel free to contribute.
+
+* `timew-completion.bash` is taken from https://github.com/lauft/timew-bashcompletion which is released under [MIT license](https://github.com/lauft/timew-bashcompletion/blob/master/LICENSE)
